# missing-person-heatmap

./: .gitignore  CLUSTERING_EVALUATION_RESULTS.md  CODE_SIMPLIFICATION.md  COMPLETE_SYSTEM.md  METHODOLOGY_MODEL_SELECTION.md  MODEL_CONFIG_SUMMARY.txt  MODEL_ENHANCEMENTS.md  PREDICTION_MODEL_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE_PREDICTION.txt  README.md  STREAMLIT_GUIDE.md  STREAMLIT_RESTRUCTURE.md  TESTING.md  UI_CHANGES.md  WEB_APP_MODEL_CONFIG.md  app_static.py  demo.py  evaluate_clustering.py  evaluate_predictors.py  pyproject.toml  requirements.txt  start-server.bat  start-server.ps1  streamlit_app.py
config/: settings.yaml
data/: metro_manila_districts.json  sample_data.csv  uploaded_data.csv
dataset/: DMResearch - Missing People.csv  Manila_City_Filter.ipynb  Manila_City_Only_List.csv  Manila_Victims_List.csv  My Victim List - Compiled.csv  data_exploration and preprocessing.ipynb  data_preprocessing.ipynb  data_preprocessing_and_data_exploration.ipynb
devops/: docker-compose.yml
devops/docker/: backend.Dockerfile  frontend.Dockerfile
notebook/: 01_data_preprocessing.ipynb  02_exploration.ipynb  03_clustering_analysis.ipynb  04_prediction_model.ipynb  04_spatial_prediction.ipynb  05_gradient_boosting_prediction.ipynb  KaizenTek.ipynb  Missing People - cleaned.csv
notebook/outputs/: 2026_predictions.csv  dbscan_clusters_map.html  gradient_boosting_predictions.csv
src/backend/: __init__.py  main.py
src/core/: __init__.py
src/core/analysis/: __init__.py  clustering.py  predictor.py  predictor_BACKUP.py
src/core/ingestion/: __init__.py  data_loader.py
src/core/preprocessing/: __init__.py  data_cleaner.py
src/core/visualization/: __init__.py  visualizer.py
src/frontend/: __init__.py  app.js  index.html  style.css
src/pipelines/: preprocess_raw_data.py
