[tool.poetry]
name = "missing-person-heatmap"
version = "0.1.0"
description = "Analysis and visualization of missing person cases in the Philippines."
authors = ["Benny <benny@example.com>"]
readme = "README.md"
packages = [
	{ include = "core", from = "src" },
	{ include = "backend", from = "src" },
	{ include = "frontend", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
geopandas = "^0.14.0"
folium = "^0.15.0"
shapely = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "src/"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
